--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 ---
 layout: home
 author_profile: true
+title: 
+header:
+  overlay_image: assets/images/2018/01/cropped-C_9L1LfUAAE9eyv.jpg
+  caption: 
+  title: 
 ---
